<resources>
    <string name="app_name">GymGC</string>
    <string name="chest">Ngực</string>
    <string name="lats">Lưng xô</string>
    <string name="shoulder">Vai</string>
    <string name="leg">Chân</string>
    <string name="abs">Bụng</string>
    <string name="glute">Mông</string>
    <string name="arm">Tay</string>
    <string name="begin_type">Nhóm cơ</string>
    <string name="exercise">Bài tập: </string>
    <string name="main">Nhóm cơ : </string>
    <string name="equiqment">Dụng cụ: </string>
    <string name="level">Cấp độ: </string>
    <string name="type">Thể loại: </string>
    <string name="instruction">Hướng dẫn</string>
    <string name="watching_video">Xem video</string>
    <string name="close_video">Đóng</string>
    <string name="signin">Đăng nhập</string>
    <string name="not_have_account">Bạn chưa có tài khoản? </string>
    <string name="signup">Đăng ký</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="remember_account">Nhớ tài khoản</string>
    <string name="copy_right">Copyright in 2021</string>
    <string name="name">Họ và tên</string>
    <string name="signup_account">Đăng ký tài khoản</string>
    <string name="signup_now">Đăng ký ngay</string>
    <string name="invalid_account">Sai thông tin tài khoản</string>
    <string name="back_again_to_exit">Trở về lần nữa để thoát ứng dụng</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="show_pass">Hiện mật khẩu</string>
    <string name="logout">Đăng xuất</string>
    <string name="setting">Cài đặt</string>
    <string name="invite">Chia sẻ bạn bè</string>
    <string name="rate">Đánh giá</string>
    <string name="about">Về chúng tôi</string>
    <string name="help">Hỗ trợ</string>
    <string name="account">Tài khoản</string>
    <string name="chats">Tin nhắn</string>
    <string name="search">Tìm kiếm</string>
    <string name="online">Đang hoạt động</string>
    <string name="offline">Ngoại tuyến</string>
    <string name="from">Hôm nay có đi đâu trời không, mà hôm nay mưa to vcl ra đi đâu được cơ chứ?</string>
    <string name="to">Thôi mưa to lắm không đi đâu chơi cả. Ở nhà chụp ảnh indoor đi shop ơi</string>
    <string name="typing">Đang soạn thảo...</string>
    <string name="url_img"><![CDATA[https://firebasestorage.googleapis.com/v0/b/gymgc-55cfd.appspot.com/o/ic_type_chest.jpg?alt=media&token=62556502-2a7c-49c9-a28d-ec5fb4f20f28]]></string>
    <string name="load_data">Đang tải dữ liệu</string>
    <string name="input_message">Nhập nội dung tin nhắn</string>
    <string name="select_image">Vui lòng chọn ảnh</string>
    <string name="upload_image">Đang tải lên ảnh</string>
    <string name="please_wait">Xin vui lòng đợi</string>
    <string name="you_want_to_logout">Bạn có muốn đăng xuất không?</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="hardware_not_support_finger">Thiết bị của bạn không hỗ trợ bảo mật vân tay</string>
    <string name="BIOMETRIC_ERROR_HW_UNAVAILABLE">Tính năng này hiện chưa sẵn sàng</string>
    <string name="title_setting_finger">Kích hoạt tính năng bảo mật vân tay</string>
    <string name="active_finger">Bạn có muốn kích hoạt vân tay?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="title_login_finger">Xác thực vân tay</string>
    <string name="description_login_finger">Vui lòng xác thực vân tay</string>
    <string name="havent_active_finger">Vui lòng đăng nhập và kích hoạt tính năng này</string>
    <string name="more_than_five_authentic">Bạn đã xác thực sai quá 5 lần. Vui lòng nhập mật nhập đăng nhập!</string>
    <string name="sent_image">Đã gửi ảnh</string>
    <string name="you">Bạn</string>
    <string name="from_date">Từ ngày</string>
    <string name="to_date">Đến ngày</string>
    <string name="input_information">Nhập các chỉ số cơ thể</string>
    <string name="weight">Cân nặng</string>
    <string name="height">Chiều cao</string>
    <string name="muscle">Tỷ lệ cơ (SMM)</string>
    <string name="fat">Khối lượng mỡ (BFM)</string>
    <string name="protetin">Khối lượng đạm (P)</string>
    <string name="mineral">Khoáng (Mineral)</string>
    <string name="water">Tỷ lệ nước (TBW)</string>
    <string name="add">Thêm</string>
    <string name="please_add_information">Vui lòng nhập thông tin</string>
    <string name="date">Ngày nhập liệu</string>
    <string name="add_bodyinfor_success">Thêm thành công</string>
    <string name="add_bodyinfor_faild">"Không thể thêm "</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="update_accout">Thông tin tài khoản</string>
    <string name="update">Cập nhật</string>
    <string name="chose_date">Chọn thời gian</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="invalid_pass">Vui lòng kiểm tra lại dữ liệu nhập</string>
    <string name="update_password_fail">Không thể thay đổi mật khẩu. Xin vui lòng kiểm tra lại!</string>
    <string name="update_password_success">Đã đổi mật khẩu thành công</string>
    <string name="update_avatar_success">Cập nhật ảnh đại diện thành công</string>
    <string name="update_avatar_fail">Không thể cập nhật ảnh đại diện</string>
    <string name="upper_limit_fat">Giới hạn trên tỷ lệ mỡ</string>
    <string name="lower_limit_fat">Giới hạn dưới tỷ lệ mỡ</string>
    <string name="please_check_information">Vui lòng kiểm tra dữ liệu nhập</string>
    <string name="chart">BIỂU ĐỒ CƠ THỂ</string>
    <string name="chose_date_search">Thời gian theo dõi</string>
    <string name="clear">Xóa</string>
    <string name="save_to_gallery">Lưu biểu đồ</string>
    <string name="clear_filter">Xóa lọc ngày</string>
    <string name="manager_bodyinformation">Quản lý chỉ số</string>
    <string name="save_to_gallery_success">Lưu thành công</string>
    <string name="save_to_gallery_error">Có lỗi xảy ra. Vui lòng kiểm tra lại!</string>
    <string name="select_chart">Chọn biểu đồ</string>
    <string name="complex">Nước, đạm, khoáng</string>
    <string name="update_body_success">Cập nhật thành công</string>
    <string name="update_body_error">Vui lòng kiểm tra lại</string>
    <string name="update_bodyinformation">Cập nhật chỉ số</string>
    <string name="all_day">Tất cả quá trình</string>
</resources>