<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_add_information"
        android:orientation="vertical"
        android:padding="@dimen/padding_login_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_chart"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/addinfor_edittext_title_size" />

        <CheckBox
            android:id="@+id/cbHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_text_title_instruction_margin_top"
            android:text="@string/weight"
            android:textSize="@dimen/addinfor_edittext_size" />

        <CheckBox
            android:id="@+id/cbFat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fat"
            android:textSize="@dimen/addinfor_edittext_size" />

        <CheckBox
            android:id="@+id/cbMuscle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/muscle"
            android:textSize="@dimen/addinfor_edittext_size" />

        <CheckBox
            android:id="@+id/cbComplex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complex"
            android:textSize="@dimen/addinfor_edittext_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="@dimen/detail_text_title_instruction_margin_top"
            android:background="@drawable/shape_dialog_button_logout"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_edt_msg"
                    android:layout_marginEnd="@dimen/margin_edt_msg"
                    android:background="@drawable/ripple_button_cancel_logout"
                    android:clickable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btnOK"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/margin_edt_msg"
                    android:layout_marginEnd="@dimen/margin_edt_msg"
                    android:background="@drawable/ripple_button_ok_logout"
                    android:text="@string/save_to_gallery"
                    android:textAllCaps="false"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</layout>