<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_add_information"
        android:orientation="vertical"
        android:padding="@dimen/padding_login_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/input_information"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/addinfor_edittext_title_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/height_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTitle"
            android:layout_marginTop="@dimen/detail_text_title_instruction_margin_top"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/height"
                android:textSize="@dimen/addinfor_edittext_size" />

            <EditText
                android:id="@+id/edtHeight"
                style="@style/InputTextInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/weight_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/height_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/weight"
                android:textSize="@dimen/addinfor_edittext_size" />

            <EditText
                android:id="@+id/edtWeight"
                style="@style/InputTextInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/muscle_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weight_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/muscle"
                android:textSize="@dimen/addinfor_edittext_size" />

            <EditText
                android:id="@+id/edtMuscle"
                style="@style/InputTextInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fat_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/muscle_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/fat"
                android:textSize="@dimen/addinfor_edittext_size" />

            <EditText
                android:id="@+id/edtFat"
                style="@style/InputTextInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/protetin_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fat_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/protetin"
                android:textSize="@dimen/addinfor_edittext_size" />

            <EditText
                android:id="@+id/edtProtetin"
                style="@style/InputTextInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mineral_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/protetin_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/mineral"
                android:textSize="@dimen/addinfor_edittext_size" />

            <EditText
                android:id="@+id/edtMineral"
                style="@style/InputTextInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/water_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mineral_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/water"
                android:textSize="@dimen/addinfor_edittext_size" />

            <EditText
                android:id="@+id/edtWater"
                style="@style/InputTextInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/water_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/date"
                android:textSize="@dimen/addinfor_edittext_size" />

            <EditText
                android:id="@+id/edtDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/addinfor_edittext_size" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/date_parent"
            android:layout_marginTop="@dimen/detail_text_title_instruction_margin_top"
            android:background="@drawable/shape_dialog_button_logout"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_edt_msg"
                    android:layout_marginEnd="@dimen/margin_edt_msg"
                    android:background="@drawable/ripple_button_cancel_logout"
                    android:clickable="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btnOK"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/margin_edt_msg"
                    android:layout_marginEnd="@dimen/margin_edt_msg"
                    android:background="@drawable/ripple_button_ok_logout"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</layout>