<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.chauduong.gym.fragment.signin.SignInViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/padding_login_parent"
            android:visibility="visible">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgLogo"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_width"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgLogo"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/detail_text_title_instruction_margin_top"
                android:orientation="horizontal"
                android:weightSum="10">

                <EditText
                    android:text="@={viewModel.phoneNumber}"
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="@dimen/detail_text_margin_top"
                    android:hint="@string/phone_number"
                    android:inputType="number" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_phone"
                android:layout_marginTop="@dimen/detail_text_margin_top"
                android:orientation="horizontal"
                android:weightSum="10">

                <EditText
                    android:text="@={viewModel.password}"
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtPhoneNumber"
                    android:layout_marginEnd="@dimen/detail_text_margin_top"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cbRememberAccount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/layout_pass"
                android:layout_marginTop="@dimen/detail_text_margin_top"
                android:checked="true"
                android:text="@string/remember_account" />

            <CheckBox
                android:id="@+id/cbShowPass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/cbRememberAccount"
                android:checked="true"
                android:text="@string/show_pass" />


            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cbShowPass"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="@dimen/detail_text_title_login_margin_top"
                android:layout_marginEnd="80dp"
                android:background="@drawable/ripple_button_login"
                android:text="@string/signin" />

            <LinearLayout
                android:id="@+id/layout_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtCopy"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/detail_text_margin_top"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_have_account"
                    android:textSize="@dimen/size_text_login" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/signup_now"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/size_text_login" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSignIn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/detail_text_margin_top"
                android:text="@string/forgot_password"
                android:textSize="@dimen/size_text_login"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCopy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/copy_right"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_transaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imgLogoTransaction"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_transaction"
                android:transitionName="splash_logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgLogoTransaction"
                android:gravity="center_horizontal"
                android:transitionName="splash_slogan">

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_centerHorizontal="true"
                    android:fontFamily="casual"
                    android:text="Strong"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_transaction_1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt1"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="mind"
                    android:textAllCaps="true"
                    android:textColor="@color/red"
                    android:textSize="@dimen/size_text_transaction_2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt2"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="casual"
                    android:text="Strong"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_text_transaction_1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt3"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="body"
                    android:textAllCaps="true"
                    android:textColor="@color/red"
                    android:textSize="@dimen/size_text_transaction_2"
                    android:textStyle="bold" />


            </RelativeLayout>
        </RelativeLayout>

    </FrameLayout>


</layout>